--- a/portfolio_app/templates/project_form.html
+++ b/portfolio_app/templates/project_form.html
@@ -1,13 +1,14 @@
+<!--/home/siisi/portfolio/portfolio_app/templates/project_form.html -->
 {% extends "base.html" %}
-{% load static form_tags %}
+{% load static i18n form_tags%}
 
-{% block title %}Add Project{% endblock %}
+{% block title %}{% trans 'Add Project' %}{% endblock %}
 
 {% block content %}
 <div class="container my-5">
     <div class="card shadow-sm bg-light">
         <div class="card-header text-primary">
-            <h2 class="text-center mb-0">Add New Project</h2>
+            <h2 class="text-center mb-0">{% trans 'Add Project' %}</h2>
         </div>
         <div class="card-body">
             <form method="post" novalidate>
@@ -92,10 +93,10 @@
 
                 <div class="mt-4 d-flex justify-content-between">
                     <a href="{% url 'index' %}" class="btn btn-outline-warning me-2">
-                        <i class="fas fa-ban me-1"></i> Cancel
+                        <i class="fas fa-ban me-1"></i> {% trans 'Cancel' %}
                     </a>
                     <button type="submit" class="btn btn-primary">
-                        <i class="fas fa-save me-1"></i> Save Project
+                        <i class="fas fa-save me-1"></i> {% trans 'Save Project' %}
                     </button>
                 </div>
             </form>
