--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,17 +1,20 @@
+{% load static i18n %}
+
+<!-- /home/siisi/portfolio/templates/footer.html -->
 <footer class="footer text-center">
     <div class="container">
         <div class="row">
             <!-- Location Column -->
             <div class="col-12 col-md-6 mb-5 mb-md-0">
-                <h4 class="text-uppercase mb-4">Location</h4>
+                <h4 class="text-uppercase mb-4">{% trans 'Location' %}</h4>
                 <p class="lead mb-0">
                     28021 San Cristóbal de los Ángeles<br />
-                    Madrid, Spain
+                    Madrid, {% trans 'Spain' %}
                 </p>
             </div>
             <!-- Social Icons Column -->
             <div class="col-12 col-md-6 mb-5 mb-md-0">
-                <h4 class="text-uppercase mb-4">Around the Web</h4>
+                <h4 class="text-uppercase mb-4">{% trans 'Around the Web' %}</h4>
                 <div class="d-flex flex-wrap justify-content-center">
                     <a class="btn btn-outline-light btn-social m-1" href="https://instagram.com/dbtevolution"
                         target="_blank">
