--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,3 +1,6 @@
+{% load static i18n %}
+<!-- /home/siisi/portfolio/templates/navbar.html -->
+
 <!-- Navigation-->
 <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
     <div class="container">
@@ -5,30 +8,30 @@
         <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button"
             data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive"
             aria-expanded="false" aria-label="Toggle navigation">
-            Menu
+            {% trans 'Menu' %}
             <i class="fas fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item mx-0 mx-lg-1">
-                    <a class="nav-link py-3 px-0 px-lg-3 rounded" href="/">Portfolio</a>
+                    <a class="nav-link py-3 px-0 px-lg-1 rounded" href="/">{% trans 'Portfolio' %}</a>
                 </li>
                 <li class="nav-item mx-0 mx-lg-1">
-                    <a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">About</a>
+                    <a class="nav-link py-3 px-0 px-lg-1 rounded" href="#about">{% trans 'About' %}</a>
                 </li>
                 <li class="nav-item mx-0 mx-lg-1">
-                    <a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Contact</a>
+                    <a class="nav-link py-3 px-0 px-lg-1 rounded" href="#contact">{% trans 'Contact' %}</a>
                 </li>
                 <li class="nav-item mx-0 mx-lg-1">
-                    <a class="nav-link py-3 px-0 px-lg-3 rounded" href="{% url 'admin_proxy' %}">Admin</a>
+                    <a class="nav-link py-3 px-0 px-lg-1 rounded" href="{% url 'admin_proxy' %}">{% trans 'Admin' %}</a>
                 </li>
                 <li class="nav-item mx-0 mx-lg-1">
-                    <a class="nav-link py-3 px-0 px-lg-3 rounded" href="/project/add">
-                        <i class="fa-solid fa-plus"></i> Project
+                    <a class="nav-link py-3 px-0 px-lg-1 rounded" href="/project/add">
+                        <i class="fa-solid fa-plus"></i> {% trans 'Project' %}
                     </a>
                 </li>
                 <li class="nav-item mx-0 mx-lg-1">
-                    <a class="nav-link py-3 px-0 px-lg-3 rounded" href="{% url 'notifications' %}">Notifications</a>
+                    <a class="nav-link py-3 px-0 px-lg-1 rounded" href="{% url 'notifications' %}">{% trans 'Notifications' %}</a>
                 </li>
             </ul>
         </div>
