--- a/portfolio_app/templates/index.html
+++ b/portfolio_app/templates/index.html
@@ -20,6 +20,13 @@
                 <div class="row justify-content-center">
                     {% for project in projects %}
                     <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="text-center mb-1">
+                            <span>{{ project.title }}</span>
+                            <br>
+                            <i class="fa-solid fa-arrow-down fa-fade"></i>
+                            <i class="fa-solid fa-arrow-down fa-beat"></i>
+                            <i class="fa-solid fa-arrow-down fa-fade"></i>
+                        </div>
                         <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#{{ project.modal_id }}">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white">
