--- a/templates/footer.html
+++ b/templates/footer.html
@@ -8,7 +8,7 @@
             <div class="col-12 col-md-6 mb-5 mb-md-0">
                 <h4 class="text-uppercase mb-4">{% trans 'Location' %}</h4>
                 <p class="lead mb-0">
-                    28021 San Cristóbal de los Ángeles<br />
+                    <!--28021 San Cristóbal de los Ángeles<br />-->
                     Madrid, {% trans 'Spain' %}
                 </p>
             </div>
